@@ -69,6 +69,8 @@ public class DIFWriter {
       public void getDataset(InvDataset ds) {
         doOneDataset(ds);
       }
+      public boolean getCatalogRef(InvCatalogRef dd) { return true; }
+      
     };
 
     ByteArrayOutputStream bis = new ByteArrayOutputStream();
